# iLab-2

./: .gitignore  README.md
1_cache/: cache.h  main.cpp
1_cache/tests/: test1.txt  test10.txt  test2.txt  test3.txt  test4.txt  test7.txt  test8.txt  test9.txt
2_Triangles/: CMakeLists.txt  line.hpp  main.cpp  mth.hpp  plane.hpp  trian.hpp  vec.hpp
3_tree/: CMakeLists.txt  Node.hpp  Tree.hpp  Tree_it.hpp  main.cpp  main_tst.cpp
4_matrix/: CMakeLists.txt  errors.hpp  main.cpp  matrix.hpp  matrix.inl  test.cpp
4_matrix/tst/: 12.ans  13.ans  14.ans  15.ans  17.ans  18.ans  19.ans  7.ans
4_matrix/tst/tstgen/: CMakeLists.txt  Makefile  gen.cpp  gen.py
5_ParaCL/: README.md
ParaCL/: README.md
Triangles/: CMakeLists.txt  line.hpp  main.cpp  mth.hpp  plane.hpp  trian.hpp  vec.cpp  vec.h  vec.hpp
cache/: cache.h  main.cpp  test1.txt
matrix/: CMakeLists.txt  errors.hpp  main.cpp  matrix.cpp  matrix.hpp  matrix.ii  matrix.inl
matrix/tst/tstgen/: Makefile  gen.cpp
tree/: CMakeLists.txt  Node.hpp  Node.ii  Tree.hpp  Tree.ii  Tree.inl  Tree_it.hpp  Tree_it.ii  main.cpp
